[package]
name = "hearthstone"
version = "0.1.0"
edition = "2021"
description = "A Hearthstone simulator written in Rust"
license = "MIT"
repository = "https://github.com/hanwentao/hearthstone.git"

[dependencies]
csv = "1.2.2"
derivative = "2.2.0"
serde = { version = "1.0.183", features = ["derive"] }
